[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP

[install]
compile = 1
optimize = 1

[bdist_wheel]
universal = 0

[aliases]
release = clean --all sdist --formats=gztar bdist_wheel --python-tag=py2 upload --sign
